--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,15 @@
-#ghost:
-#  expose:
-#    - "2368"
-#  image: ghost
+frontdoor:
+  build: ./nginx
+  ports:
+    - 80:80
+    - 443:443
+  links:
+    - ghost
+  restart: always
 
-#frontdoor:
-#  #image: nginx
-#  build: ./nginx
-#  ports:
-#    - "80:80"
-#    - "443:443"
-#  links:
-#    - ghost
-#
-
-blog:
+ghost:
   ports:
     - "2368:2368"
   image: ghost
+  restart: always
+
