--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,10 +1,6 @@
 FROM nginx
-RUN rm /etc/nginx/nginx.conf
-COPY conf/nginx.conf /etc/nginx/nginx.conf
-COPY conf/sites-available/ghost /etc/nginx/sites-available/ghost
-RUN mkdir /etc/nginx/sites-enabled
-RUN ln -s /etc/nginx/sites-available/ghost /etc/nginx/sites-enabled/ghost
 
-#COPY content/index.html /usr/share/nginx/html/index.html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY conf/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80 443
