--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,12 +1,8 @@
-#daemon off;
-
 user  nginx;
-# Let nginx figure out the processes I guess
-worker_processes  auto;
+worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
-
 
 events {
     worker_connections  1024;
