--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -1,19 +1,19 @@
-FROM ghost:0.7.4
-
-# copy over our config file
-
-COPY ./copy/final-config.js "$GHOST_CONTENT/config.js"
-
-VOLUME $GHOST_CONTENT
+FROM ghost:0.7.5
 
 ## setup support for s3 storage
 
-#RUN mkdir -p "$GHOST_CONTENT/storage/ghost-s3"
-#COPY ./copy/storage/ghost-s3/index.js "$GHOST_CONTENT/storage/ghost-s3/index.js"
-#
-#RUN npm install --save ghost-s3-storage
-#RUN npm prune
-#RUN npm shrinkwrap
-#RUN npm install --production
+ENV GHOST_STORAGE_S3 $GHOST_SOURCE/content/storage/ghost-s3
+
+RUN mkdir -p $GHOST_STORAGE_S3 \
+    && cd $GHOST_STORAGE_S3 \
+    && npm install --prefix . ghost-s3-storage
+
+COPY ./copy/index.js $GHOST_STORAGE_S3
+
+## override ghost entrypoint so we can add a wait for the database to initialize
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["npm", "start"]
