--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.9.9
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY conf/default.conf /etc/nginx/conf.d/default.conf
+COPY copy/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80 443
