--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghost:0.7.5
+FROM ghost:0.11.0
 
 ## setup support for s3 storage
 
@@ -6,7 +6,7 @@ ENV GHOST_STORAGE_S3 $GHOST_SOURCE/content/storage/ghost-s3
 
 RUN mkdir -p $GHOST_STORAGE_S3 \
     && cd $GHOST_STORAGE_S3 \
-    && npm install --prefix . ghost-s3-storage
+    && npm install --prefix . ghost-storage-adapter-s3
 
 COPY ./copy/index.js $GHOST_STORAGE_S3
 
