Completed upgrade to Ghost 0.11.0.

--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -2,11 +2,11 @@ FROM ghost:0.11.0
 
 ## setup support for s3 storage
 
-ENV GHOST_STORAGE_S3 $GHOST_SOURCE/content/storage/ghost-storage-adapter-s3
+ENV GHOST_STORAGE_S3 $GHOST_SOURCE/content/storage/ghost-s3
 
 RUN mkdir -p $GHOST_STORAGE_S3 \
     && cd $GHOST_STORAGE_S3 \
-    && npm install --prefix . ghost-storage-adapter-s3
+    && npm install --prefix . ghost-s3-service
 
 COPY ./copy/index.js $GHOST_STORAGE_S3
 
@@ -17,3 +17,4 @@ RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["npm", "start"]
+
